<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ The Exomiser - A tool to annotate and prioritize genomic variants
  ~
  ~ Copyright (c) 2016-2019 Queen Mary University of London.
  ~ Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.monarchinitiative.exomiser</groupId>
    <artifactId>exomiser</artifactId>
    <version>13.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>exomiser</name>
    <description>A toolkit for filtering variants and prioritising genes by phenotype from whole genome or whole exome VCF files.</description>
    <url>https://github.com/exomiser/Exomiser</url>
    <inceptionYear>2012</inceptionYear>

    <licenses>
        <license>
            <name>GNU AFFERO GENERAL PUBLIC LICENSE, Version 3 (AGPL-3.0)</name>
            <url>http://opensource.org/licenses/AGPL-3.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Jules Jacobsen</name>
            <email>j.jacobsen@qmul.ac.uk</email>
            <organization>Queen Mary University of London</organization>
            <organizationUrl>http://qmul.ac.uk</organizationUrl>
        </developer>
        <developer>
            <name>Damian Smedley</name>
            <email>d.smedley@qmul.ac.uk</email>
            <organization>Queen Mary University of London</organization>
            <organizationUrl>http://qmul.ac.uk</organizationUrl>
        </developer>
        <developer>
            <name>Peter Robinson</name>
            <email>peter.robinson@jax.org</email>
            <organization>The Jackson Laboratory for Genomic Medicine</organization>
            <organizationUrl>https://www.jax.org/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/exomiser/Exomiser.git</connection>
        <developerConnection>scm:git:git@github.com:exomiser/Exomiser.git</developerConnection>
        <url>https://github.com/exomiser/Exomiser/tree/master</url>
    </scm>

    <ciManagement>
        <system>Circle CI</system>
        <url>https://circleci.com/gh/exomiser/Exomiser</url>
    </ciManagement>

    <modules>
        <module>exomiser-core</module>
        <module>exomiser-spring-boot-autoconfigure</module>
        <module>exomiser-spring-boot-starter</module>
        <module>exomiser-spring-boot-test</module>
        <module>exomiser-cli</module>
        <module>exomiser-data-genome</module>
        <module>exomiser-data-phenotype</module>
        <module>exomiser-rest-prioritiser</module>
        <module>exomiser-web</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.organization>The Monarch Initiative</project.organization>
        <sonar.language>java</sonar.language>
        <jannovar.version>0.29</jannovar.version>
        <htsjdk.version>2.19.0</htsjdk.version>
        <guava.version>27.1-jre</guava.version>
        <protobuf.version>3.8.0</protobuf.version>
        <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
    </properties>
 
    <repositories>
        <repository>
            <id>sonumina</id>
            <url>http://sonumina.de/maven</url>
        </repository>
        <repository>
            <id>compbio</id>
            <url>http://compbio.charite.de/tl_files/maven</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--DI framework -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <type>jar</type>
        </dependency>
        <!--H2 is a very versatile and highly compatible pure java DB-->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>
        <!--https://github.com/brettwooldridge/HikariCP/wiki/FAQ#q-how-to-i-properly-enable-preparedstatement-caching-for-postgresql-->
        <!--        <dependency>-->
        <!--            <groupId>com.impossibl.pgjdbc-ng</groupId>-->
        <!--            <artifactId>pgjdbc-ng</artifactId>-->
        <!--            <version>0.4</version>-->
        <!--        </dependency>-->
        <!--HikariCP is a "zero-overhead" production ready JDBC connection pool.
        https://github.com/brettwooldridge/HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>

        <!-- Need to override guava to version 21.0 which  contains the Java 8 Collectors support on immutable Collections
        used by exomiser-core-->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protobuf.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
            <version>${protobuf.version}</version>
        </dependency>
        <!--JSON + YAML deps-->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-protobuf</artifactId>
        </dependency>

        <!--Test dependencies-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>0.1.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Required to run Mockito with JUnit Jupiter-->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- ByteBuddy 1.9.0+ required for compiling on Java 11 -->
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <!-- Don't enable parallel tests as these will fail in the autoconfigure module due to MVStore
                only being able to be opened once by any given JVM -->
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <configuration>
                    <excludes>
                        <exclude>**/resources/**</exclude>
                        <exclude>**/assemble/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <!--<minimum>0.60</minimum>-->
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
